<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.15">
  <GVL Name="GVL" Id="{05d49b24-de93-43f1-a914-a9fdd31de259}">
    <Declaration><![CDATA[{attribute 'Tc2GvlVarNames'}
VAR_GLOBAL
	
	bInlifeBeat: BOOL;
		T_200ms: BOOL;
	
	
// ########## Stober setup ##########//

	// Axis Carriage
	Carriage_Axis :TAXmodule;
	PDO_CARRIAGEax_IN AT %I* :stPDO_SI6_IN;
	PDO_CARRIAGEax_OUT AT %Q* :stPDO_SI6_OUT;
	CarriageSettings: TAxSettingsModule := (  
		MaxPos		:= 100000,
		MinPos		:= 0,
		Velocity	:= 150,
		Accel		:= 100, 
		Deccel		:= 100	);	
	fbCarriage_manager: FB_AchsManager;
	
	// Axis Turret
	Turret_Axis :TAXmodule;
	PDO_TURRETax_IN AT %I* :stPDO_SI6_IN;
	PDO_TURRETax_OUT AT %Q* :stPDO_SI6_OUT;
	TurretSettings: TAxSettingsModule := (  
		MaxPos		:= 100000,
		MinPos		:= 0,
		Velocity	:= 150,
		Accel		:= 100, 
		Deccel		:= 100	);	
	fbTurret_manager: FB_AchsManager;
	
	// Axis CrossCut
	CrossCut_Axis :TAXmodule;
	PDO_CROSSCUTax_IN AT %I* :stPDO_SI6_IN;
	PDO_CROSSCUTax_OUT AT %Q* :stPDO_SI6_OUT;
	CrossCutSettings: TAxSettingsModule := (  
		MaxPos		:= 100000,
		MinPos		:= 0,
		Velocity	:= 150,
		Accel		:= 100, 
		Deccel		:= 100	);	
	fbCrossCut_manager: FB_AchsManager;
	
	// Axis X-Drive
	XDrive_Axis :TAXmodule;
	PDO_XDRIVEax_IN AT %I* :stPDO_SI6_IN;
	PDO_XDRIVEax_OUT AT %Q* :stPDO_SI6_OUT;
	XDriveSettings: TAxSettingsModule := (  
		MaxPos		:= 100000,
		MinPos		:= 0,
		Velocity	:= 150,
		Accel		:= 100, 
		Deccel		:= 100	);	
	fbXDrive_manager: FB_AchsManager;
	
	// Axes Z1 master and Z2 slave
	Z1_Axis :TAXmodule;
	PDO_Z1ax_IN AT %I* :stPDO_SI6_IN;
	PDO_Z1ax_OUT AT %Q* :stPDO_SI6_OUT;
	
	Z2_Axis :TAXmodule;
	PDO_Z2ax_IN AT %I* :stPDO_SI6_IN;
	PDO_Z2ax_OUT AT %Q* :stPDO_SI6_OUT;
	
	fbZ1_manager: FB_AchsManager;
	fbZ2_manager: FB_AchsManager;
	
	Z1Settings: TAxSettingsModule := (   
		MaxPos		:= 100000,
		MinPos		:= 0,
		Velocity	:= 150,
		Accel		:= 100, 
		Deccel		:= 100,	
	
		IsCoupled	:= FALSE,			///The axis is coupled with other axes.
		IsSlave		:= TRUE,			///Axis is slave in a Master/Slave application
		Slave_MaxDiff := 20,			///Maximum deviation between Master and Slave for Positioning; default 20
		Slave_MaxDiff_Enbl := 100		///Maximum deviation between Master and Slave for ENBL	; default 100								
									);
		
	Z2Settings: TAxSettingsModule := (  
		MaxPos		:= 100000,
		MinPos		:= 0,
		Velocity	:= 150,
		Accel		:= 100, 
		Deccel		:= 100,	
		
		IsCoupled	:= FALSE,			///The axis is coupled with other axes.
		IsSlave		:= FALSE,			///Axis is slave in a Master/Slave application
		Slave_MaxDiff := 20,			///Maximum deviation between Master and Slave for Positioning; default 20
		Slave_MaxDiff_Enbl := 100		///Maximum deviation between Master and Slave for ENBL	; default 100
									);
	
	
	XDrivePot	:INT;
	
	refsens AT %I* :BOOL;
	
	
// ########## Import ##########//
	bSafetyOK		: BOOL ;
	bAutoCrossCut	: BOOL ;
	bMachineHoming: BOOL;
	bTurretHome: BOOL;
	bCarriageHomeRH: BOOL;
	bCarriageHomeLH: BOOL;
	bCrossCutHomeLH: BOOL;
	bCrossCutHomeRH: BOOL;
	bZAxisHome: BOOL;
	
	fbSawCurrent: FB_AnalogIn;
	
	bLimitLeft: BOOL;
    bLimitRight: BOOL;
	bCrossCutCentre: BOOL;
	bCrossCutCentreForRotation: BOOL;
	bApproachingLimitRight: BOOL;
	bApproachingLimitLeft: BOOL;
	dCrossCutMedian: DINT;
	
	//bTurretReturn: BOOL;
	//TurretReturn: SR;
	bTriggerReset: BOOL;
	bTurretMedianRange: BOOL;
	bTurretBufferSpeed: BOOL;
	
	//Ax1	:	AXIS_REF;
	//Ax2	:	AXIS_REF;
	//fbMC_GearIn: MC_GearIn;
	
	bSawUP		:	BOOL;
	bSawDOWN	:	BOOL;
	
	bAnyServoError: BOOL;
	bAutoCrossCutErr: BOOL;
	
	uTurretSSIMedian: UDINT;
	bTurretUnderMedian: BOOL;
	bTurretOverMedian: BOOL;
	bTurret045Range: BOOL;
	
	RS_TriggerStopLH: RS;
	RS_TriggerStopRH: RS;
	
	//fbCarriageValueFilter: FB_IntFilter;
	rCrossCutSpeedMultiplier: REAL;
	dRailLimitLeft: DINT;
	dRailLimitRight: DINT;
	bEchainCrashPosLeft: BOOL;
	bEchainCrashPosRight: BOOL;
	
	bTurretMedian: BOOL;
	//bTurretCW: BOOL;
	//bTurretCCW: BOOL;
	
	// Visualization Variables
	bRemote: BOOL;
(*	bAutoCrossCutSingle: BOOL;
	bAutoCrossCutDouble: BOOL;
	bZAxisSlow: BOOL;
	bZAxisMed: BOOL;
	bZAxisFast: BOOL;
	bTrtCCW: BOOL;
	bTrtCW: BOOL;
	bCrgLH: BOOL;
	bCrgRH: BOOL;
	bTeachLeft: BOOL;
	bTeachRight: BOOL; *)
	
	bLostTurretRetainValues: BOOL;
	bLostCrossCutRetainValues: BOOL;
	R_TRIG_TurretValue: R_TRIG;


	bXDriveFwd: BOOL;
	bXDriveRev: BOOL;
	bRipCutSpeed: BOOL;
	bSawUpLimit: BOOL;
	bSawDownLimit: BOOL;
	bCarriageRightEN: BOOL;
	bCarriageLeftEN: BOOL;
	bTurretCWEN: BOOL;
	bTurretCCWEN: BOOL;
	bTurretJogFast: BOOL;
	bWaterLine: BOOL;
	bSawCutEN: BOOL;
	bSawReturnEN: BOOL;
	bZAxisUpEN: BOOL;
	bZAxisDownEN: BOOL;
	bAutoCrossCutDouble: BOOL;
	bAutoCrossCutReady: BOOL;
	lCarriageMedian: LREAL;
	//bCarriageCentreReference: BOOL;
	rCrossCutJogVelocity: REAL;
	bCarriageJogFast: BOOL;
	bTeachReadyLeft: BOOL;
	bTeachReadyRight: BOOL;
	bTeach: BOOL;
	bCarriageCentreRef: BOOL;
	//AnalogIn_DINT_Turret: FB_AnalogIn_DINT;
	AnalogIn_LREAL_Turret: FB_AnalogIn_LREAL;
	rZAxisSpeed: REAL;
	rCarriageMedian: LREAL;
	AnalogIn_LREAL_Carriage: FB_AnalogIn_LREAL;
	bCrossCutLeftLimit: BOOL;
	bCrossCutRightLimit: BOOL;
	bAutoUp: BOOL;
	bAutoDown: BOOL;
	bAutoCut: BOOL;
	bAutoReturn: BOOL;
	RS_DownLimit: RS;
	dCrossCutEncoderValue: DINT;
	SR_CWlimit: SR;
	RS_TurretCentre: RS;
	SR_CCWlimit: SR;
//	AnalogIn_DINT_CrossCut: FB_AnalogIn_DINT;
	AnalogIn_LREAL_CrossCut: FB_AnalogIn_LREAL;
	
//########## HMI Controls ##########//
	bHorn: BOOL;
	bFieldLight: BOOL;
	bCarriageEN: BOOL;
	bTurretEN: BOOL;
	bCrossCutEN: BOOL;
	bCrossCutHMIsensor: BOOL;
	bLiftingPosition: BOOL;

END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>